changed the footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <footer>
+        <p>this is to simulate a conflict</p>
+    </footer>
     
 </body>
 </html>
