Added a line to footer

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
     <footer>
         <p>This is the footer</p>
+        <p>Added a line to footer</p>
     </footer>
-  
+
 </body>
 </html
         
